flux/utilities/nas/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nas  # Must match the Service name
  namespace: nas
subsets:
  - addresses:
      - ip: 192.168.2.60
    ports:
      - port: 30027
        name: nc
      - port: 30041
        name: im
