flux/utilities/nas/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nas-service
  namespace: nas
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 30027
      targetPort: 30027
